Add translations for all languages

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -385,4 +385,25 @@
     <string name="hideTipsText">Само няколко са и се постарахме да са информативни.</string>
     <string name="hideTipsButton">Скрий съветите за постоянно</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Добре дошли в DuckDuckGo!</string>
+    <string name="onboardingDaxText">Интернет може да бъде и страшен.&lt;br/&gt;&lt;br/&gt;Не се притеснявайте! Частното търсене и сърфиране е по-лесно, отколкото си мислите.</string>
+    <string name="onboardingLetsDoItButton">Да го направим!</string>
+    <string name="daxIntroCtaText">Сега, отворете един от любимите си сайтове! &lt;br/&gt;&lt;br/&gt;Ще блокирам тракерите, за да не ви шпионират. Също така ще надстроя сигурността на вашата връзка, ако е възможно. &#128274;</string>
+    <string name="daxEndCtaText">&lt;br/&gt;&lt;br/&gt;Запомнете: всеки път, когато браузвате с мен,подрязвам крилцата на някоя неприятна реклама. &#128077;</string>
+    <string name="daxSerpCtaText">Търсенията ви в DuckDuckGo са анонимни и никога не съхранявам историята на вашите търсения. Никога. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Последен въпрос!&lt;br/&gt;&lt;br/&gt;Искате ли защита от проследяване, когато отваряте връзки от други приложения? &lt;br/&gt;&lt;br/&gt;Направете DuckDuckGo вашия браузър по подразбиране!</string>
+    <string name="daxSearchWidgetCtaText">Днес ви върви!&lt;br/&gt;&lt;br/&gt;Търсете частно още по-бързо! Добавете уиджет търсачката DuckDuckGo към началния си екран.</string>
+    <string name="daxNonSerpCtaText">Всеки сайт има степен на поверителност. Докоснете, за да видите как защитих поверителността ви.&lt;br/&gt;&lt;br/&gt;Искате ли да пробвате нещо различно? Опитайте да изчистите данните си, като натиснете бутона за пожар.</string>
+    <string name="daxMainNetworkStep1CtaText">Внимание!&lt;br/&gt;&lt;br/&gt; %s управлява основна мрежа за проследяване.&lt;br/&gt;&lt;br/&gt;Ниската степен на поверителност ви предупреждава за подобни сайтове.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Внимание!&lt;br/&gt;&lt;br/&gt; %s е собственост на %s, който управлява основна мрежа за проследяване.</string>
+    <string name="daxMainNetworkStep21CtaText">Всъщност, %s тракерите дебнат в около %s топ сайтове. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Всъщност, %s тракери дебнат из целия интернет. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Ще блокирам тези тракери, когато разглеждате не-%s сайтове.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
+        <item quantity="other">и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">се опитваше да ви проследи тук. &lt;br/&gt;&lt;br/&gt;Блокирах го!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</string>
+
 </resources>
