--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -385,4 +385,26 @@
     <string name="hideTipsText">Ima ih samo nekoliko, a pokušali smo ih učiniti što informativnijima.</string>
     <string name="hideTipsButton">Sakrij savjete zauvijek</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Dobro došli u DuckDuckGo!</string>
+    <string name="onboardingDaxText">Internet može biti pomalo jeziv.&lt;br/&gt;&lt;br/&gt;          Ne brinite! Privatno pretraživanje i pregledavanje lakše je nego što mislite.</string>
+    <string name="onboardingLetsDoItButton">Učinimo to!</string>
+    <string name="daxIntroCtaText">Zatim pokušajte posjetiti jedno od svojih omiljenih web-mjesta! &lt;br/&gt;&lt;br/&gt;Blokirat ću tragače kako vas ne bi mogli špijunirati. Nadogradit ću i sigurnost vaše veze ako je moguće. &#128274;</string>
+    <string name="daxEndCtaText">&lt;br/&gt;&lt;br/&gt;Shvatili ste ovo! Zapamtite: svaki put kada pregledavate sa mnom jeziva reklama gubi krila. &#128077;</string>
+    <string name="daxSerpCtaText">Vaše pretrage u DuckDuckGo anonimne su i nikad ne pohranjujem vašu povijest pretraga. Nikad. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Prije nego što se ugasim! &lt;br/&gt;&lt;br/&gt;Želite li zaštitu od tragača kada otvarate veze sa drugih aplikacija? &lt;br/&gt;&lt;br/&gt;Učinite DuckDuckGo svojim zadanim preglednikom!</string>
+    <string name="daxSearchWidgetCtaText">&lt;br/&gt;&lt;br/&gt;Dobro vam ide! Pretražujte privatno još brže! Dodajte widget za pretragu DuckDuckGo na početni zaslon.</string>
+    <string name="daxNonSerpCtaText">Svako web-mjesto ima ocjenu privatnosti. Dodirnite je da biste vidjeli kako sam zaštitio vašu privatnost.&lt;br/&gt;&lt;br/&gt;Želite li uživati? Pokušajte izbrisati svoje podatke pritiskom na gumb \"Pali\".</string>
+    <string name="daxMainNetworkStep1CtaText">Obratite pozornost!&lt;br/&gt;&lt;br/&gt; %s pokreće veliku mrežu praćenja.&lt;br/&gt;&lt;br/&gt;Niska ocjena privatnosti upozorit će vas na ovakva mjesta.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Obratite pozornost!&lt;br/&gt;&lt;br/&gt; %s je u vlasništvu kompanije %s, koja vodi glavnu mrežu za praćenje.</string>
+    <string name="daxMainNetworkStep21CtaText">Zapravo, %s tragači vrebaju oko %s najboljih web-mjesta. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Zapravo, %s tragači vrebaju po cijelom internetu. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Blokirat ću te tragače dok pregledavate ne-%s web-mjesta.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">i &lt;b&gt;%d ostali&lt;/b&gt; su vas pokušavali pratiti ovdje. &lt;br/&gt;&lt;br/&gt;Blokirao sam ih!&lt;br/&gt;&lt;br/&gt; ☝️Možete provjeriti URL traku kako biste vidjeli tko vas pokušava pratiti kad posjetite novo web-mjesto.️</item>
+        <item quantity="few">i &lt;b&gt;%d ostali&lt;/b&gt; su vas pokušavali pratiti ovdje. &lt;br/&gt;&lt;br/&gt;Blokirao sam ih!&lt;br/&gt;&lt;br/&gt; ☝️Možete provjeriti URL traku kako biste vidjeli tko vas pokušava pratiti kad posjetite novo web-mjesto.️ </item>
+        <item quantity="other">i &lt;b&gt;%d ostali&lt;/b&gt; su vas pokušavali pratiti ovdje. &lt;br/&gt;&lt;br/&gt;Blokirao sam ih!&lt;br/&gt;&lt;br/&gt; ☝️Možete provjeriti URL traku kako biste vidjeli tko vas pokušava pratiti kad posjetite novo web-mjesto.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">vas je pokušavao pratiti ovdje. &lt;br/&gt;&lt;br/&gt;Blokirao sam ga!&lt;br/&gt;&lt;br/&gt; ☝️Možete provjeriti URL traku kako biste vidjeli tko vas pokušava pratiti kad posjetite novo web-mjesto.️</string>
+
 </resources>
