--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -389,4 +389,27 @@
     <string name="hideTipsText">Je jich jen pár a snažili jsme se udělat je informativní.</string>
     <string name="hideTipsButton">Navždy skrýt tipy</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Vítejte v DuckDuckGo!</string>
+    <string name="onboardingDaxText">Internet může být někdy trochu strašidelný.&lt;br/&gt;&lt;br/&gt;Nebojte se! Anonymní vyhledávání a procházení je jednodušší, než si myslíte.</string>
+    <string name="onboardingLetsDoItButton">Pojďme na to!</string>
+    <string name="daxIntroCtaText">Dále zkuste navštívit některý z Vašich oblíbených webů! &lt;br/&gt;&lt;br/&gt;Zablokujeme sledovače, aby Vás nemohli špehovat. Pokud to bude možné, upgraduji také zabezpečení Vašeho připojení. &#128274;</string>
+    <string name="daxEndCtaText">Máte to! &lt;br/&gt;&lt;br/&gt;Pamatujte: pokaždé, když internet procházíte se mnou, hrozným reklamám jsou přistřižena křídla. &#128077;</string>
+    <string name="daxSerpCtaText">Vaše vyhledávání DuckDuckGo jsou anonymní a historii Vašeho vyhledávání nikdy nikam neukládáme. Vůbec nikdy. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Než zase zalezu! &lt;br/&gt;&lt;br/&gt;Chcete ochranu před sledovači při otevírání odkazů z jiných aplikací?&lt;br/&gt;&lt;br/&gt;Udělejte z DuckDuckGo svůj implicitní prohlížeč!</string>
+    <string name="daxSearchWidgetCtaText">Jste na roli! &lt;br/&gt;&lt;br/&gt;Vyhledávejte anonymně ještě rychleji! Přidejte si na domovskou obrazovku vyhledávací widget DuckDuckGo.</string>
+    <string name="daxNonSerpCtaText">Každý web má svůj stupeň ochrany osobních údajů. Klepnutím na něj si zobrazíte, jak jsem chránil Vaše soukromí.&lt;br/&gt;&lt;br/&gt;Chcete zkusit něco zajímavého? Zkuste stiskem tlačítka palby vymazat svá data.</string>
+    <string name="daxMainNetworkStep1CtaText">Hlavy vzhůru!&lt;br/&gt;&lt;br/&gt; %s provozuje jednu významnou sledovací síť.&lt;br/&gt;&lt;br/&gt;Nízká úroveň ochrany osobních údajů Vás na takovéto stránky upozorní.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Hlavy vzhůru!&lt;br/&gt;&lt;br/&gt; %s vlastní společnost %s, která provozuje jednu významnou sledovací síť.</string>
+    <string name="daxMainNetworkStep21CtaText">Ve skutečnosti %s sledovačů číhá na přibližně %s nejnavštěvovanějších webů. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Ve skutečnosti %s sledovači číhají na internetu všude. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%sKdyž budete navštěvovat weby mimo %s, budeme tyto sledovače blokovat.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one"> a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
+        <item quantity="few"> a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
+        <item quantity="many">a &lt;b&gt;%d dalších&lt;/b&gt; se Vás tu snažilo sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
+        <item quantity="other"> a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText"> se Vás tady snažil sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme to!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</string>
+
 </resources>
