--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -385,4 +385,25 @@
     <string name="hideTipsText">Der er kun få, og vi forsøgte at gøre dem oplysende.</string>
     <string name="hideTipsButton">Skjul tip for evigt</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Velkommen til DuckDuckGo!</string>
+    <string name="onboardingDaxText">Internettet kan være ret uhyggeligt.&lt;br/&gt;&lt;br/&gt;Bare rolig! Det er lettere at søge og browse privat, end du tror.</string>
+    <string name="onboardingLetsDoItButton">Lad os gøre det!</string>
+    <string name="daxIntroCtaText">Prøv derefter at besøge et af dine foretrukne websteder! &lt;br/&gt;&lt;br/&gt; Den blokerer trackere, så de ikke kan spionere dig. Den opgraderer også din forbindelsessikkerhed, hvis det er muligt. &#128274;</string>
+    <string name="daxEndCtaText">Du har det! &lt;br/&gt;&lt;br/&gt;Husk: hver gang du browser med mig, mister en uhyggelig annonce sine vinger. &#128077;</string>
+    <string name="daxSerpCtaText">Dine DuckDuckGo-søgninger er anonyme, og jeg gemmer aldrig din søgehistorik. Nogensinde. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Før jeg går ud! &lt;br/&gt;&lt;br/&gt;Ønsker du trackerbeskyttelse, når du åbner links fra andre apps? &lt;br/&gt;&lt;br/&gt;Gør DuckDuckGo til din standardbrowser!</string>
+    <string name="daxSearchWidgetCtaText">Du er i gang! &lt;br/&gt;&lt;br/&gt;Søg helt privat endnu hurtigere! Føj DuckDuckGo widget til din startskærm.</string>
+    <string name="daxNonSerpCtaText">Alle websteder har en privatlivskvalitet. Tryk på det for at se, hvordan jeg beskyttede dit privatliv.&lt;br/&gt;&lt;br/&gt;Vil du prøve noget smart? Prøv at rydde dine data ved at trykke på brand-knappen.</string>
+    <string name="daxMainNetworkStep1CtaText">Pas på!&lt;br/&gt;&lt;br/&gt; %s kører et stort sporingsnetværk.&lt;br/&gt;&lt;br/&gt;En lav privatlivsgrad vil føre dig til sider som denne.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Pas på!&lt;br/&gt;&lt;br/&gt; %s ejes af %s, der driver et større sporingsnetværk.</string>
+    <string name="daxMainNetworkStep21CtaText">Faktisk lurer %s trackere ved %s de mest populære websteder. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Faktisk lurer %s trackere over hele internettet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Jeg blokerer disse trackere, når du gennemser ikke-%s websteder.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">og &lt;b&gt;%d anden&lt;/b&gt; forsøgte at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
+        <item quantity="other">og &lt;b&gt;%d andre&lt;/b&gt; forsøgte at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">prøvede at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</string>
+
 </resources>
