--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -385,4 +385,25 @@
     <string name="hideTipsText">Es gibt nur wenige, und wir haben versucht, sie informativ zu gestalten.</string>
     <string name="hideTipsButton">Tipps für immer ausblenden</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">WILLKOMMEN BEI DUCKDUCKGO!</string>
+    <string name="onboardingDaxText">Das Internet kann ein bisschen gruselig sein.&lt;br/&gt;&lt;br/&gt;Keine Sorge! Privat zu suchen und zu surfen ist einfacher als Sie denken.</string>
+    <string name="onboardingLetsDoItButton">Fangen wir an!</string>
+    <string name="daxIntroCtaText">Versuchen Sie als nächstes, eine Ihrer Lieblingsseiten zu besuchen! &lt;br/&gt;&lt;br/&gt;Ich blockiere Tracker, damit sie Sie nicht ausspionieren können. Ich werde auch die Sicherheit Ihrer Verbindung verbessern, wenn das möglich ist. &#128274;</string>
+    <string name="daxEndCtaText">Gut gemacht! &lt;br/&gt;&lt;br/&gt;Hinweis Jedes Mal, wenn Sie mit mir surfen, verliert eine gruselige Anzeige ihre Flügel. &#128077;</string>
+    <string name="daxSerpCtaText">Ihre DuckDuckGo-Suchanfragen sind anonym und ich speichere niemals Ihren Suchverlauf. Nie. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Bevor ich mich zurückziehe! &lt;br/&gt;&lt;br/&gt;Möchten Sie sich vor Trackern schützen, wenn Sie Links von anderen Apps öffnest? &lt;br/&gt;&lt;br/&gt;Machen Sie DuckDuckGo zu Ihrem Standardbrowser!</string>
+    <string name="daxSearchWidgetCtaText">Sie sind auf dem Laufenden! &lt;br/&gt;&lt;br/&gt;Suchen Sie privat noch schneller! Fügen Sie das DuckDuckGo-Such-Widget zu Ihrem Startbildschirm hinzu.</string>
+    <string name="daxNonSerpCtaText">Jede Website hat eine Datenschutzstufe. Tippen Sie darauf, um zu sehen, wie ich Ihre Privatsphäre geschützt habe.&lt;br/&gt;&lt;br/&gt;Sie haben Lust darauf? Versuchen Sie, Ihre Daten zu löschen, indem Sie den Feuerknopf drücken.</string>
+    <string name="daxMainNetworkStep1CtaText">Augen auf!&lt;br/&gt;&lt;br/&gt; %s betreibt ein großes Tracking-Netzwerk.&lt;br/&gt;&lt;br/&gt;Eine niedriger Datenschutzstufe weist Sie darauf hin.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Augen auf!&lt;br/&gt;&lt;br/&gt; %s gehört %s, das ein großes Tracking-Netzwerk betreibt.</string>
+    <string name="daxMainNetworkStep21CtaText">Tatsächlich lauern %s Tracker auf ungefähr %s der Top-Sites. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Tatsächlich lauern %s Tracker im ganzen Internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Ich blockiere diese Tracker, wenn Sie Websites durchsuchen, die nicht zu %s gehören.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">und &lt;b&gt;%d andere&lt;/b&gt; haben versucht, Sie hier zu verfolgen. &lt;br/&gt;&lt;br/&gt;Ich habe sie blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu verfolgen, wenn Sie eine neue Website besuchen.</item>
+        <item quantity="other">und &lt;b&gt;%d andere&lt;/b&gt; haben versucht, Sie hier zu verfolgen. &lt;br/&gt;&lt;br/&gt;Ich habe sie blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu verfolgen, wenn Sie eine neue Website besuchen.</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">  hat versucht, Sie hier zu verfolgen. &lt;br/&gt;&lt;br/&gt;Ich habe es blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu verfolgen, wenn Sie eine neue Website besuchen.</string>
+
 </resources>
