--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -385,4 +385,25 @@
     <string name="hideTipsText">Υπάρχουν λίγες μόνο και προσπαθήσαμε να τις καταστήσουμε ενημερωτικές.</string>
     <string name="hideTipsButton">Απόκρυψη συμβουλών για πάντα</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Καλώς ορίσατε στον DuckDuckGo!</string>
+    <string name="onboardingDaxText">Το Διαδίκτυο μπορεί να είναι κάπως ανατριχιαστικό.&lt;br/&gt;&lt;br/&gt;Μην ανησυχείτε! Η ιδιωτική έρευνα και φυλλομέτρηση είναι ευκολότερες από όσο νομίζετε.</string>
+    <string name="onboardingLetsDoItButton">Ας ξεκινήσουμε!</string>
+    <string name="daxIntroCtaText">Στη συνέχεια, δοκιμάστε να επισκεφτείτε έναν από τους αγαπημένους σας ιστότοπους! &lt;br/&gt;&lt;br/&gt;Θα εμποδίσω τους ιχνηλάτες ώστε να μην μπορούν να σας κατασκοπεύουν. Επίσης, θα αναβαθμίσω την ασφάλεια της σύνδεσής σας αν είναι δυνατόν. &#128274;</string>
+    <string name="daxEndCtaText">Έχετε αυτό! &lt;br/&gt;&lt;br/&gt;Να θυμάστε: κάθε φορά που περιηγείστε μαζί μου μια ανατριχιαστική διαφήμιση χάνει τα φτερά της. &#128077;</string>
+    <string name="daxSerpCtaText">Οι αναζητήσεις σας στο DuckDuckGo είναι ανώνυμες και ποτέ δεν αποθηκεύω το ιστορικό αναζήτησης. Ποτέ. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Πριν ξεγλυστρίσω!&lt;br/&gt;&lt;br/&gt;Θέλετε προστασία από τον εντοπισμό και την ιχνηλασία όταν ανοίγετε συνδέσμους από άλλες εφαρμογές; &lt;br/&gt;&lt;br/&gt;Κάνετε το DuckDuckGo τον προεπιλεγμένο σας φυλλομετρητή!</string>
+    <string name="daxSearchWidgetCtaText">Έχετε πάρει φόρα! &lt;br/&gt;&lt;br/&gt;Αναζήτηση ιδιωτικά ακόμα πιο γρήγορα! Προσθέστε το εικονίδιο αναζήτησης DuckDuckGo στην αρχική σας οθόνη.</string>
+    <string name="daxNonSerpCtaText">Κάθε τοποθεσία έχει κάποιο βαθμό προστασίας προσωπικών δεδομένων και απορρήτου. Πατήστε πάνω του για να δείτε πώς προστάτευσα το απόρρητό σας. &lt;br/&gt;&lt;br/&gt; Δοκιμάστε να καθαρίσετε τα δεδομένα σας πατώντας το κουμπί φωτιάς.</string>
+    <string name="daxMainNetworkStep1CtaText">Ενημέρωση εκ των προτέρων!&lt;br/&gt;&lt;br/&gt; %s τρέχει ένα σημαντικό δίκτυο παρακολούθησης.&lt;br/&gt;&lt;br/&gt;Ένας χαμηλός βαθμός απορρήτου θα σας μαρτυρήσει σε τοποθεσίες σαν και αυτή.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Ενημέρωση εκ των προτέρων!&lt;br/&gt;&lt;br/&gt; %s ανήκει στην %s, η οποία διαχειρίζεται ένα σημαντικό δίκτυο παρακολούθησης.</string>
+    <string name="daxMainNetworkStep21CtaText">Στην πραγματικότητα, οι %s ιχνηλάτες παραμονευουν σε περίπου %s των κορυφαίων τοποθεσιών. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Στην πραγματικότητα, οι ιχνηλάτες %s κρύβονται σε όλο το διαδίκτυο. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Θα αποκλείσω αυτούς τους ιχνηλάτες όταν περιηγείστε σε μη %s ιστότοπους.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">και &lt;b&gt;%d άλλος&lt;/b&gt; προσπαθούσε να σας ιχνηλατήσει εδώ. &lt;br/&gt;&lt;br/&gt;Τον μπλοκάρισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+        <item quantity="other">και &lt;b&gt;%d άλλοι&lt;/b&gt; προσπαθούσαν να σας εντοπίσουν εδώ. &lt;br/&gt;&lt;br/&gt;Τους εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">προσπαθούσε να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</string>
+
 </resources>
