--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -418,4 +418,25 @@
     <string name="hideTipsText">Neid on üsna vähe ja püüdsime muuta need informatiivseks.</string>
     <string name="hideTipsButton">Peida näpunäited igaveseks</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Tere tulemast DuckDuckGo kasutajaks!</string>
+    <string name="onboardingDaxText">Internet võib olla üsna jube.&lt;br/&gt;&lt;br/&gt;Ärge muretsege! Privaatselt otsimine ja sirvimine on lihtsam kui arvate.</string>
+    <string name="onboardingLetsDoItButton">Teeme ära!</string>
+    <string name="daxIntroCtaText">Järgmisena proovige külastada ühte oma lemmiksaitidest! &lt;br/&gt;&lt;br/&gt;Mina aga blokeerin jälgijaid, et nad ei saaks teid luurata. Täiustan võimalusel ka teie ühenduse turvalisust. &#128274;</string>
+    <string name="daxEndCtaText">Käpas! &lt;br/&gt;&lt;br/&gt;Pidage meeles: iga kord, kui minuga sirvite, kaotab jube reklaam tiivad. &#128077;</string>
+    <string name="daxSerpCtaText">Teie DuckDuckGo otsingud on anonüümsed ja ma ei salvesta kunagi teie otsinguajalugu. Mitte kunagi. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Enne kui lähen! &lt;br/&gt;&lt;br/&gt;Kas soovite jälgijate kaitset muude rakenduste linkide avamisel? &lt;br/&gt;&lt;br/&gt;Tehke DuckDuckGo enda vaikebrauseriks!</string>
+    <string name="daxSearchWidgetCtaText">Olete kursis!&lt;br/&gt;&lt;br/&gt;Otsige privaatselt veel kiiremini! Lisage avaekraanile DuckDuckGo otsinguvidin.</string>
+    <string name="daxNonSerpCtaText">Igal saidil on privaatsusklass. Puudutage seda, et näha, kuidas ma teie privaatsust kaitsesin.&lt;br/&gt;&lt;br/&gt;Tahate aga proovida midagi eriti peent? Proovige kustutada oma andmed, puudutades tule nuppu.</string>
+    <string name="daxMainNetworkStep1CtaText">Ettevaatust!&lt;br/&gt;&lt;br/&gt; %s haldab suurt jälgimisvõrku.&lt;br/&gt;&lt;br/&gt;Sellistest saitidest annab märku madal privaatsusklass.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Ettevaatust!&lt;br/&gt;&lt;br/&gt; %s kuulub ettevõttele %s, mis haldab suurt jälgimisvõrku.</string>
+    <string name="daxMainNetworkStep21CtaText">Tegelikult varitsevad %s jälgijad umbes %s populaarseimal saidil. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Tegelikult varitsevad %s jälitajad kogu Internetis, &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s blokeerin need jälitajad, kui sirvite saite, mis pole %s.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">ja &lt;b&gt;%d teine&lt;/b&gt; üritasid teid siin jälitada. &lt;br/&gt;&lt;br/&gt;Blokeerisin nad!&lt;br/&gt;&lt;br/&gt; ☝️Võite vaadata URL-i riba, et näha, kes üritab teid jälgida, kui külastate uut saiti.️</item>
+        <item quantity="other">ja &lt;b&gt;%d teised&lt;/b&gt; üritasid teid siin jälitada. &lt;br/&gt;&lt;br/&gt;Blokeerisin nad!&lt;br/&gt;&lt;br/&gt; ☝️Võite vaadata URL-i riba, et näha, kes üritab teid jälgida, kui külastate uut saiti.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText"> üritas teid siin jälitada. &lt;br/&gt;&lt;br/&gt;Blokeerisin selle!&lt;br/&gt;&lt;br/&gt; ☝️Võite vaadata URL-i riba, et näha, kes üritab teid jälgida, kui külastate uut saiti.️</string>
+
 </resources>
