--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -385,4 +385,25 @@
     <string name="hideTipsText">Het zijn er maar een paar en we hebben geprobeerd ze informatief te maken.</string>
     <string name="hideTipsButton">Tips voor altijd verbergen</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">WELKOM BIJ DUCKDUCKGO!</string>
+    <string name="onboardingDaxText">Het internet kan best eng zijn.&lt;br/&gt;&lt;br/&gt;Maak je geen zorgen! Privé zoeken en browsen is eenvoudiger dan u denkt.</string>
+    <string name="onboardingLetsDoItButton">Laten we het Doen!</string>
+    <string name="daxIntroCtaText">Probeer vervolgens een van uw favoriete sites te bezoeken! &lt;br/&gt;&lt;br/&gt;Ik blokkeer trackers zodat ze u niet kunnen bespioneren. Ik zal ook indien mogelijk de beveiliging van uw verbinding upgraden. &#128274;</string>
+    <string name="daxEndCtaText">U kunt het! &lt;br/&gt;&lt;br/&gt;Denk eraan: elke keer als u met mij surft, verliest een enge advertentie zijn vleugels. &#128077;</string>
+    <string name="daxSerpCtaText">Uw DuckDuckGo-zoekopdrachten zijn anoniem en ik sla uw zoekgeschiedenis nooit op. Nooit. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Voordat ik onderduik! &lt;br/&gt;&lt;br/&gt;Wilt u trackerbeveiliging wanneer u koppelingen vanuit andere apps opent? &lt;br/&gt;&lt;br/&gt;Maak DuckDuckGo Uw Standaardbrowser!</string>
+    <string name="daxSearchWidgetCtaText">U bent goed bezig! &lt;br/&gt;&lt;br/&gt;Zoek privé nog sneller! Voeg de DuckDuckGo-zoekwidget toe aan uw startscherm.</string>
+    <string name="daxNonSerpCtaText">Elke site heeft een privacy-cijfer. Tik erop om te zien hoe ik uw privacy heb beschermd.&lt;br/&gt;&lt;br/&gt;Zullen we eens gek doen? Probeer uw gegevens te wissen door op de vuurknop te drukken.</string>
+    <string name="daxMainNetworkStep1CtaText">Let op!&lt;br/&gt;&lt;br/&gt; %s beheert een groot trackingnetwerk.&lt;br/&gt;&lt;br/&gt;Een laag privacycijfer zal u waarschuwen voor dergelijke sites.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Let op!&lt;br/&gt;&lt;br/&gt; %s is eigendom van %s, dat een groot trackingnetwerk beheert.</string>
+    <string name="daxMainNetworkStep21CtaText">In feite liggen er %s trackers op de loer op ongeveer %s topwebsites. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">In feite liggen er overal op internet %s trackers op de loer. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Ik blokkeer deze trackers wanneer u niet-%s sites bezoekt.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one"> en &lt;b&gt;%d anderen &lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
+        <item quantity="other">en &lt;b&gt;%d anderen&lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText"> probeerde u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb het geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</string>
+
 </resources>
