--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -378,9 +378,6 @@
     <string name="systemSearchOnboardingButtonMore">Pokaż więcej</string>
     <string name="systemSearchOnboardingButtonLess">Ukryć</string>
     <string name="systemSearchOnboardingButtonOk">Rozumiem</string>
-    <string name="onboardingWelcomeTitle">WITAMY W DUCKDUCKGO</string>
-    <string name="onboardingDaxText">Internet może być trochę przerażający.&lt;br/&gt;&lt;br/&gt;Nie martw się! Prywatne wyszukiwanie i przeglądanie jest łatwiejsze niż myślisz.</string>
-    <string name="onboardingLetsDoItButton">Zróbmy to!</string>
 
     <!-- Dax Dialog -->
     <string name="daxDialogHideButton">UKRYĆ</string>
@@ -395,5 +392,28 @@
     <string name="hideTipsTitle">Ukryć pozostałe wskazówki?</string>
     <string name="hideTipsText">Jest tylko kilka i staraliśmy się, aby były one pouczające.</string>
     <string name="hideTipsButton">Ukryj wskazówki na zawsze</string>
+
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">WITAMY W DUCKDUCKGO</string>
+    <string name="onboardingDaxText">Internet może być trochę przerażający.&lt;br/&gt;&lt;br/&gt;Nie martw się! Prywatne wyszukiwanie i przeglądanie jest łatwiejsze niż myślisz.</string>
+    <string name="onboardingLetsDoItButton">Zróbmy to!</string>
+    <string name="daxIntroCtaText">Następnie spróbuj odwiedzić jedną z twoich ulubionych stron! &lt;br/&gt;&lt;br/&gt;Zablokuję trackery, aby nie mogły cię szpiegować. Jeśli to możliwe, zaktualizuję również bezpieczeństwo twojego połączenia. &#128274;</string>
+    <string name="daxEndCtaText">Masz to! &lt;br/&gt;&lt;br/&gt;Pamiętaj: za każdym razem, gdy przeglądasz ze mną, przerażająca reklama traci skrzydła. &#128077;</string>
+    <string name="daxSerpCtaText">Twoje wyszukiwania w DuckDuckGo są anonimowe i nigdy nie przechowuję Twojej historii wyszukiwania. Zawsze. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Zanim wyskoczę! &lt;br/&gt;&lt;br/&gt;Chcesz ochrony trackera, gdy otwierasz linki z innych aplikacji? &lt;br/&gt;&lt;br/&gt;Ustaw DuckDuckGo jako domyślną przeglądarkę!</string>
+    <string name="daxSearchWidgetCtaText">Jesteś na fali! &lt;br/&gt;&lt;br/&gt;Szukaj prywatnie jeszcze szybciej! Dodaj widżet wyszukiwania DuckDuckGo do ekranu głównego.</string>
+    <string name="daxNonSerpCtaText">Każda strona ma stopień prywatności. Stuknij, aby zobaczyć, jak chroniłem twoją prywatność.&lt;br/&gt;&lt;br/&gt;Chcesz się zachwycić? Spróbuj wyczyścić swoje dane, naciskając przycisk strzału.</string>
+    <string name="daxMainNetworkStep1CtaText">Heads-up!&lt;br/&gt;&lt;br/&gt; %s prowadzi dużą sieć śledzenia.&lt;br/&gt;&lt;br/&gt;Niski stopień prywatności zapewni Ci dostęp do takich witryn.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Heads-up!&lt;br/&gt;&lt;br/&gt; %s jest własnością %s, która prowadzi dużą sieć śledzenia.</string>
+    <string name="daxMainNetworkStep21CtaText">W rzeczywistości %s trackery czają się na około %s najlepszych witryn. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">W rzeczywistości trackery %s czają się w Internecie. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Zablokuję te moduły śledzące, gdy przeglądasz witryny inne niż %s.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="few">i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="many">i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="other">i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">próbował cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</string>
 
 </resources>
