--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -389,4 +389,26 @@
     <string name="hideTipsText">Sunt doar câteva, iar noi am încercat să le facem informative.</string>
     <string name="hideTipsButton">Ascunde sfaturile definitiv</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Bine ai venit la DuckDuckGo!</string>
+    <string name="onboardingDaxText">Internetul poate fi cam terifiant.&lt;br/&gt;&lt;br/&gt;Nu te îngrijora! Căutarea și navigarea în mod confidențial sunt mai ușoare decât crezi.</string>
+    <string name="onboardingLetsDoItButton">Hai Să O Facem!</string>
+    <string name="daxIntroCtaText">Apoi, încearcă să vizitezi unul din site-urile tale preferate! &lt;br/&gt;&lt;br/&gt;Voi bloca urmăritorii ca să nu te mai spioneze. Voi îmbunătăți, de asemenea, securitatea conexiunii tale, dacă este posibil. &#128274;</string>
+    <string name="daxEndCtaText">Ai ghicit! &lt;br/&gt;&lt;br/&gt;Reține: de fiecare dată când navighezi cu mine, o reclamă terifiantă își pierde aripile. &#128077;</string>
+    <string name="daxSerpCtaText">Căutările tale DuckDuckGo sunt anonime și nu îți voi stoca niciodată istoricul căutării. Niciodată. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Înainte să dezertez! &lt;br/&gt;&lt;br/&gt;Vrei protecție împotriva urmăritorilor când deschizi link-uri din alte aplicații? &lt;br/&gt;&lt;br/&gt;Fă DuckDuckGo Browserul Tău Implicit!</string>
+    <string name="daxSearchWidgetCtaText">Ești pe val! &lt;br/&gt;&lt;br/&gt;Caută în mod confidențial chiar mai repede! Adaugă widgetul de căutare DuckDuckGo pe ecranul de pornire.</string>
+    <string name="daxNonSerpCtaText">Fiecare site are un grad de confidențialitate. Atingeți-l ca să vezi cum ți-am protejat confidențialitatea.&lt;br/&gt;&lt;br/&gt;Vrei să te dai mare? Încearcă să-ți ștergi datele, apăsând butonul de tragere.</string>
+    <string name="daxMainNetworkStep1CtaText">Atenție!&lt;br/&gt;&lt;br/&gt; %s rulează o rețea de urmărire majoră.&lt;br/&gt;&lt;br/&gt;Un grad de confidențialitate scăzut te va avertiza despre site-uri de acest fel.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Atenție!&lt;br/&gt;&lt;br/&gt; %s este deținută de %s, care administrează o rețea de urmărire semnificativă.</string>
+    <string name="daxMainNetworkStep21CtaText">De fapt, %s urmăritorii dau târcoale %s site-urilor de top. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">De fapt, %s urmăritorii stau la pândă oriunde în internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Voi bloca acești urmăritori când navighezi pe site-uri non-%s.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one"> și &lt;b&gt;%d altul&lt;/b&gt; încercau să te urmărească aici. &lt;br/&gt;&lt;br/&gt;I-am blocat!&lt;br/&gt;&lt;br/&gt; ☝️ Poți verifica bara URL pentru a vedea cine încearcă să te urmărească atunci când vizitezi un nou site.️</item>
+        <item quantity="few"> și &lt;b&gt;%d alții&lt;/b&gt; încercau să te urmărească aici. &lt;br/&gt;&lt;br/&gt;I-am blocat!&lt;br/&gt;&lt;br/&gt; ☝️ Poți verifica bara URL pentru a vedea cine încearcă să te urmărească atunci când vizitezi un nou site.️</item>
+        <item quantity="other">  și &lt;b&gt;%d alții&lt;/b&gt; încercau să te urmărească aici. &lt;br/&gt;&lt;br/&gt;I-am blocat!&lt;br/&gt;&lt;br/&gt; ☝️ Puteți verifica bara URL pentru a vedea cine încearcă să vă urmărească atunci când vizitați un nou site.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">încerca să te urmărească aici. &lt;br/&gt;&lt;br/&gt;Am blocat-o!&lt;br/&gt;&lt;br/&gt; ☝️ Poți verifica bara URL pentru a vedea cine încearcă să te urmărească atunci când vizitezi un nou site.️</string>
+
 </resources>
