--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -393,4 +393,27 @@
     <string name="hideTipsText">Le nekaj jih je in poskušali smo jih narediti informativne.</string>
     <string name="hideTipsButton">Skrivaj nasvete za vedno</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">Dobrodošli v aplikaciji DUCKDUCKGO</string>
+    <string name="onboardingDaxText">&lt;br/&gt;&lt;br/&gt;Brez skrbi! Internet je lahko grozljiv. Iskanje in brskanje na zaseben način je lažje, kot si mislite.</string>
+    <string name="onboardingLetsDoItButton">Dajmo se ga lotiti!</string>
+    <string name="daxIntroCtaText">Nato obiščite eno od svojih najljubših spletišč! &lt;br/&gt;&lt;br/&gt;Blokiral bom sledilce, da vas ne bi vohunili. Prav tako bom nadgradil varnost vaše povezave. &#128274;</string>
+    <string name="daxEndCtaText">&lt;br/&gt;&lt;br/&gt;Ne pozabite: vsakič, ko brskate z mano, grozljiv oglas izgubi krila. &#128077;</string>
+    <string name="daxSerpCtaText">Vaša iskanja v DuckDuckGo so anonimna in nikoli ne shranim vaše zgodovine iskanja. Vedno. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">&lt;br/&gt;&lt;br/&gt;Želite zaščito sledilca, ko odpirate povezave iz drugih aplikacij? &lt;br/&gt;&lt;br/&gt;Naredite DuckDuckGo svoj privzeti brskalnik!</string>
+    <string name="daxSearchWidgetCtaText">&lt;br/&gt;&lt;br/&gt;Iščite na zaseben način še hitreje! Dodajte pripomoček za iskanje DuckDuckGo na domači zaslon.</string>
+    <string name="daxNonSerpCtaText">Vsako spletno mesto ima oceno zasebnosti. Tapnite nanj da vidite kako barni vašo zasebnost.&lt;br/&gt;&lt;br/&gt;Se želite navdušiti? Poskusite izbrisati svoje podatke s pritiskom na gumb za požar.</string>
+    <string name="daxMainNetworkStep1CtaText">Glavo pokonci!&lt;br/&gt;&lt;br/&gt; %s vodi glavno mrežo za sledenje.&lt;br/&gt;&lt;br/&gt;Nizka ocena zasebnosti vas bo usmerila na taka spletna mesta.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Glavo pokonci!&lt;br/&gt;&lt;br/&gt; %s je last podjetja %s, ki vodi glavno sledilno mrežo.</string>
+    <string name="daxMainNetworkStep21CtaText">Pravzaprav %s sledilci skrivajo od%s najboljših spletišč. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Pravzaprav %s se sledilci skrivajo po vsem internetu. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Blokiral bom te sledilce med brskanjem po spletiščih mestih, ki niso %s.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">in &lt;b&gt;%d drugi&lt;/b&gt; so vas skušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.️</item>
+        <item quantity="two">in &lt;b&gt;%d drugi&lt;/b&gt; so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletno mesto.️</item>
+        <item quantity="few">in &lt;b&gt;%d drugi&lt;/b&gt; so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
+        <item quantity="other">in &lt;b&gt;%d drugi&lt;/b&gt; so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletno mesto.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">vas je poskušal izslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</string>
+
 </resources>
