--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -401,4 +401,25 @@
     <string name="hideTipsText">Det finns bara några få, och vi försökte göra dem informativa.</string>
     <string name="hideTipsButton">Dölj tipsen för alltid</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">VÄLKOMMEN TILL DUCKDUCKGO</string>
+    <string name="onboardingDaxText">Internet kan vara lite läskigt.&lt;br/&gt;&lt;br/&gt;Oroa dig inte! Att söka och surfa privat är lättare än du tror.</string>
+    <string name="onboardingLetsDoItButton">Vi kör!</string>
+    <string name="daxIntroCtaText">Prova sedan att besöka en av dina favoritwebbplatser! &lt;br/&gt;&lt;br/&gt;Jag blockerar trackers så att de inte kan spionera på dig. Jag ska också uppgradera säkerheten för din uppkoppling om det är möjligt. &#128274;</string>
+    <string name="daxEndCtaText">Du klarar det här! &lt;br/&gt;&lt;br/&gt;Kom ihåg: varje gång du surfar med mig förlorar en läskig annons sina vingar. &#128077;</string>
+    <string name="daxSerpCtaText">Dina DuckDuckGo-sökningar är anonyma och jag lagrar aldrig din sökhistorik. Någonsin. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Innan jag går!&lt;br/&gt;&lt;br/&gt;Vill du ha tracker-skydd när du öppnar länkar från andra appar?&lt;br/&gt;&lt;br/&gt;Gör DuckDuckGo till din standardwebbläsare!</string>
+    <string name="daxSearchWidgetCtaText">Du är på väg!&lt;br/&gt;&lt;br/&gt;Sök privat ännu snabbare! Lägg till DuckDuckGo-sökwidgeten på din startsida.</string>
+    <string name="daxNonSerpCtaText">Varje webbplats har ett sekretessbetyg. Klicka på den för att se hur jag skyddade din integritet.&lt;br/&gt;&lt;br/&gt;Vill du ha det ännu bättre? Försök att rensa dina data genom att använda brandknappen.</string>
+    <string name="daxMainNetworkStep1CtaText">Se upp!&lt;br/&gt;&lt;br/&gt; %s driver ett stort tracking-nätverk.&lt;br/&gt;&lt;br/&gt;Ett lågt sekretessbetyg tipsar dig om webbplatser som denna.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Se upp!&lt;br/&gt;&lt;br/&gt; %s ägs av %s, som driver ett större tracking-nätverk.</string>
+    <string name="daxMainNetworkStep21CtaText">I själva verket lurar %s trackers på %s av de bästa webbplatserna. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">I själva verket lurar %s trackers över hela internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s Jag blockerar dessa trackers när du surfar på webbplatser som inte är %s.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one">och &lt;b&gt;%d andra&lt;/b&gt; försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
+        <item quantity="other">och &lt;b&gt;%d andra&lt;/b&gt; försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText">försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</string>
+
 </resources>
