--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -420,4 +420,25 @@
     <string name="hideTipsText">Sadece birkaç tane var ve onları da bilgilendirici hale getirmeye çalıştık.</string>
     <string name="hideTipsButton">İpuçlarını sonsuza kadar gizle</string>
 
+    <!-- New Onboarding Experience -->
+    <string name="onboardingWelcomeTitle">DuckDuckGo\'ya hoş geldiniz!</string>
+    <string name="onboardingDaxText">İnternet biraz ürkütücü olabilir.&lt;br/&gt;&lt;br/&gt;Endişelenmeyin! Özel olarak arama yapmak ve sitelere göz atmak düşündüğünüzden daha kolaydır.</string>
+    <string name="onboardingLetsDoItButton">Hadi başlayalım!</string>
+    <string name="daxIntroCtaText">Şimdi favori sitelerinizden birini ziyaret etmeyi deneyin! &lt;br/&gt;&lt;br/&gt;İzleyicileri engelleyeceğim, böylece sizi gözetlemeyecekler. Mümkünse bağlantınızın güvenliğini de yükselteceğim. &#128274;</string>
+    <string name="daxEndCtaText">İşte böyle!&lt;br/&gt;&lt;br/&gt;Unutmayın: benimle İnterneti her gezişinizde tüyler ürpertici bir reklam daha kaybolur . &#128077;</string>
+    <string name="daxSerpCtaText">DuckDuckGo aramalarınız anonimdir ve arama geçmişiniz asla saklanmaz. Asla. &#128588;</string>
+    <string name="daxDefaultBrowserCtaText">Evet, gitmeden son bir şey daha! &lt;br/&gt;&lt;br/&gt;Diğer uygulamalardan bağlantıları açtığınızda izleyici koruması ister misiniz? &lt;br/&gt;&lt;br/&gt;DuckDuckGo\'yu Varsayılan Tarayıcınız yapın!</string>
+    <string name="daxSearchWidgetCtaText">Harikasınız! &lt;br/&gt;&lt;br/&gt;Gizli olarak daha hızlı arama yapın! DuckDuckGo arama widget\'ını giriş ekranınıza ekleyin.</string>
+    <string name="daxNonSerpCtaText">Her sitenin bir gizlilik derecesi vardır. Gizliliğinizi nasıl koruduğumu görmek için dokunun.&lt;br/&gt;&lt;br/&gt;Biraz daha çılgınlaşmaya ne dersiniz? Yangın düğmesine basarak verilerinizi silmeyi deneyin.</string>
+    <string name="daxMainNetworkStep1CtaText">Dikkat!&lt;br/&gt;&lt;br/&gt; %s büyük bir izleme ağı işletiyor.&lt;br/&gt;&lt;br/&gt;Düşük gizlilik derecesi sizi bu gibi sitelere yönlendirecektir.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Dikkat!&lt;br/&gt;&lt;br/&gt; %s, büyük bir izleme ağı işleten %s şirketine aittir.</string>
+    <string name="daxMainNetworkStep21CtaText">Aslında, %s izleyicileri en iyi sitelerin yaklaşık %s kadarına hakim. &#128561; &lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Aslında, %s izleyicileri İnternetin her yerinde pusuda. &#128561; &lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep2CtaText">%s %s dışındaki sitelere göz atarken bu izleyicileri engelleyeceğim.</string>
+    <plurals name="daxTrackersBlockedCtaText">
+        <item quantity="one"> ve &lt;b&gt;%d diğer&lt;/b&gt; sizi burada izlemeye çalışıyordu. &lt;br/&gt;&lt;br/&gt;Onları engelledim!&lt;br/&gt;&lt;br/&gt; ☝️Yeni bir siteyi ziyaret ettiğinizde sizi kimin izlemeye çalıştığını görmek için URL çubuğunu kontrol edebilirsiniz.</item>
+        <item quantity="other"> ve &lt;b&gt;%d diğerleri&lt;/b&gt; sizi burada izlemeye çalışıyordu. &lt;br/&gt;&lt;br/&gt;Onları engelledim!&lt;br/&gt;&lt;br/&gt; ☝️Yeni bir siteyi ziyaret ettiğinizde sizi kimin izlemeye çalıştığını görmek için URL çubuğunu kontrol edebilirsiniz.</item>
+    </plurals>
+    <string name="daxTrackersBlockedCtaZeroText"> sizi burada izlemeye çalışıyordu. &lt;br/&gt;&lt;br/&gt;Onu engelledim!&lt;br/&gt;&lt;br/&gt; ☝️Yeni bir siteyi ziyaret ettiğinizde sizi kimin izlemeye çalıştığını görmek için URL çubuğunu kontrol edebilirsiniz.</string>
+
 </resources>
